--- a/index.html
+++ b/index.html
@@ -3,22 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./sytle.css" />
     <title>My Resume</title>
 </head>
 <body>
  <h1>Norest Dhliwayo</h1>
- <img src="./assets/images/profile.jpg" height="200" alt="my profile">
+ <img src="./assets/images/profile.jpg" alt="My Profile" height="150" class="star" />
  <h2>Summary:</h2>   
  <p>
-    I"m a ambitious student.</br>
-    Putting in the work & effort, so that i'll leave nothing to chance.
-    #make it happen
+    <ul>
+        <li>I"m a ambitious student.</li>
+    <li>Putting in the work & effort, so that i'll leave nothing to chance.</li>
+    <li>#make it happen</li>
+    </ul>
+    
 </p>
 <h2>Education:</h2>
 <p> 
     <h4>Studying at:</h4>
-    Chinhoyi University Of Technology</br>
-    Level: 2.1
+    <ul>
+        <li>Chinhoyi University Of Technology</li>
+        <li>Level: 2.1</li>
+    </ul>
+    
 </p>
 <h2>Skills:</h2>
 <p>Relatively good in:
