--- a/public/hobbies.html
+++ b/public/hobbies.html
@@ -1,4 +1,10 @@
-<h1>My Hobbies</h1>
+<style>
+    html
+    {
+        background: lightgray;
+    }
+</style>
+<h1 style="color: green;">My Hobbies</h1>
 <P>
     <ul>
         <li>Playing:</li>
