--- a/public/contact.html
+++ b/public/contact.html
@@ -1,4 +1,10 @@
-<h1>Contact Me:</h1>
+<style>
+    html
+    {
+        background: lightgray;
+    }
+</style>
+<h1 style="color: green;">Contact Me:</h1>
 <p>Tel: +263787867965</p>
 <p>Email: dhliwayonorest@gmail.com</p>
 <p>Address:</p>
