--- a/public/hobbies.html
+++ b/public/hobbies.html
@@ -1,9 +1,7 @@
-<style>
-    html
-    {
-        background: lightgray;
-    }
-</style>
+<head>
+    <link rel="stylesheet" href="../sytle.css" />
+</head>
+
 <h1 style="color: green;">My Hobbies</h1>
 <P>
     <ul>
