--- a/public/contact.html
+++ b/public/contact.html
@@ -1,8 +1,6 @@
-<style>
-    html
-    {
-        background: lightgray;
-    }
+<head>
+    <link rel="stylesheet" href="../sytle.css" />
+</head>
 </style>
 <h1 style="color: green;">Contact Me:</h1>
 <p>Tel: +263787867965</p>
