--- a/public/hobbies.html
+++ b/public/hobbies.html
@@ -1,11 +1,17 @@
 <head>
     <link rel="stylesheet" href="../sytle.css" />
+    <style>
+        h3
+        {
+            background-color: grey;
+        }
+    </style>
 </head>
 
 <h1 style="color: green;">My Hobbies</h1>
 <P>
     <ul>
-        <li>Playing:</li>
+        <h3><li>Playing</li></h3>
         <ol>
             <br />
             <li>Soccer</li>
@@ -19,7 +25,7 @@
             <hr />
         </ol>
         <br /> 
-        <li>Watching:</li>
+        <h3><li>Watching</li></h3>
         <ol>
             <br />
             <li><a href="https://www.premierleague.com/fixtures?team=FIRST">Soccer</a></li>
