--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./sytle.css" />
     <title>My Resume</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sofadi+One&display=swap" rel="stylesheet">
 </head>
 <body>
  <h1>Norest Dhliwayo</h1>
@@ -21,6 +24,7 @@
 <h2>Education:</h2>
 <p> 
     <h4>Studying at:</h4>
+    <img src="./assets/images/cut.png" height="200" alt="cut logo" />
     <ul>
         <li>Chinhoyi University Of Technology</li>
         <li>Level: 2.1</li>
