--- a/public/contact.html
+++ b/public/contact.html
@@ -1,5 +1,8 @@
 <head>
     <link rel="stylesheet" href="../sytle.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sofadi+One&display=swap" rel="stylesheet">
 </head>
 </style>
 <h1 style="color: green;">Contact Me:</h1>
