--- a/public/hobbies.html
+++ b/public/hobbies.html
@@ -6,9 +6,12 @@
             background-color: grey;
         }
     </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sofadi+One&display=swap" rel="stylesheet">
 </head>
 
-<h1 style="color: green;">My Hobbies</h1>
+<h1>My Hobbies</h1>
 <P>
     <ul>
         <h3><li>Playing</li></h3>
