--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 <h2>Skills:</h2>
 <p>Relatively good in:
     <ul>
-        <li>C programming</li>
-        <li>C#</li>
+        <li>C programming: <img src="./assets/images/star.png" height="20" alt="star" /> <img src="./assets/images/star.png" height="20" alt="star" /> <img src="./assets/images/star.png" height="20" alt="star" /></li>
+        <li>C#: <img src="./assets/images/star.png" height="20" alt="star" /> <img src="./assets/images/star.png" height="20" alt="star" /> </li>
     </ul>
 </p>
 <h2>My Hobbies:</h2>
